Fix docs tab size being incorrect on Firefox

--- a/docs/css/ldoc.css
+++ b/docs/css/ldoc.css
@@ -36,6 +36,7 @@ code {
 	font-size: 85%;
 	white-space: pre;
 	tab-size: 4;
+	-moz-tab-size: 4;
 	padding: 2px 4px;
 	background-color: rgb(33, 33, 33, 0.1);
 }
